--- a/Challenges/Day_01/style.css
+++ b/Challenges/Day_01/style.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #F398BE;
+  background-color: #98f3a0;
 }
 
 .box{
@@ -13,8 +13,8 @@ body{
 }
 
 .search{
-  color: #9E314B;
-  background-color: #F398BE;
+  color: #71f3ab;
+  background-color: #138b6d;
   width: 50px;
   height: 50px;
   border-radius: 50%;
