--- a/Challenges/Day_02/style.css
+++ b/Challenges/Day_02/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #E67BAB;
+    background-color: #ff822e;
     
 }
 
@@ -14,14 +14,14 @@ body {
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    box-shadow: 0 5px 0 white;
+    box-shadow: 0 5px 0 rgb(0, 0, 0);
     background: transparent;
     animation: animate 1s linear infinite;
 }
 
 .loading {
     background-color: transparent;
-    box-shadow: 0 0 5px rgba(224, 220, 220, 0.253);
+    box-shadow: 0 0 5px rgba(168, 160, 160, 0.253);
     font-family: 'Ubuntu Mono', monospace;
     color: white;
     font-size: 1.5em;
