--- a/Challenges/Day_06/style.css
+++ b/Challenges/Day_06/style.css
@@ -10,7 +10,7 @@ body {
     /* position: relative; */
     width: 90px;
     height: 90px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     transform: rotate(45deg);
     animation: beat 1.4s linear infinite;
 }
@@ -22,7 +22,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     transform: translateY(-50%);
     border-radius: 50%;
 }
